# origin

./: README.md  README_CN.md  install.md  publish.md  pyproject.toml
docs/aioi/: aioi.md
docs/opid/: opid.md
llm/: chat_llm.py
llm/openai/: chat_openai.py
llm/test/: openai_test.py
test/: test_playwright.py
