[project]
authors = []
license = { text = "MIT" }
requires-python = "<4.0,>=3.8"
dependencies = []
name = "origin"
version = "0.0.1"
description = "Origin mono-repo"
readme = "README.md"

[project.urls]
repository = "https://www.github.com/rstarall/origin"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "origin"
version = "0.1.0"
description = "A brief description of your project"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
